users api completed
